--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,16 @@
         }
     ],
     "require": {
-        "php": ">=5.4",
-        "doctrine/orm": "^2.2",
-        "doctrine/doctrine-bundle": "^1.2",
-        "symfony/framework-bundle": "^2.1|^3.0|^4.0",
-        "symfony/twig-bundle": "^2.0|^3.0|^4.0",
-        "twig/twig": "^1.12|^2.0"
+        "php": ">=8.1",
+        "doctrine/orm": "^2.7",
+        "doctrine/doctrine-bundle": "^2.5",
+        "symfony/framework-bundle": "^5.0",
+        "symfony/twig-bundle": "^5.0",
+        "twig/twig": "^2.13|^3.0.4"
+    }
+    ,
+    "require-dev": {
+        "roave/security-advisories": "dev-latest"
     },
     "autoload": {
         "psr-4": {
